Document the new exc: module and $edit:exceptions.

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -11,6 +11,10 @@ name = "edit"
 title = "The Editor Module (edit:)"
 
 [[articles]]
+name = "exc"
+title = "The Exception Module (exc:)"
+
+[[articles]]
 name = "math"
 title = "The Math Module (math:)"
 
