Update the docs regarding builtin modules
The existing documentation is somewhat inconsistent with respect to
builtin modules and what constitutes "reference" documentation. This
change attempts to bring a bit more consistency to the documentation and
fill in some gaps.

--- a/website/learn/index.toml
+++ b/website/learn/index.toml
@@ -13,3 +13,11 @@ title = "Some Unique Semantics"
 [[articles]]
 name = "effective-elvish"
 title = "Effective Elvish"
+
+[[articles]]
+name = "name"
+title = "The Name"
+
+[[articles]]
+name = "philosophy"
+title = "The Philosophy"
