Allow codecov upload to fail.
Codecov's API endpoint is sometimes unstable. The CI should not fail when the
upload fails.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,4 +11,4 @@ before_test:
   - go version
 test_script:
   - go test -coverprofile=coverage -covermode=set ./...
-  - curl -s https://codecov.io/bash -o codecov && bash codecov -f coverage
+  - curl -s https://codecov.io/bash -o codecov && bash codecov -f coverage || ver > nul
