Rewrite pkg/cli/histutil.
- Organize code around two interfaces, Store and Cursor.

- Ensure that a session store is always available, even if the DB is not
  accessible.

This fixes #909.

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ _testmain.go
 *.exe
 
 # Project specific
-/t/ # Small applications for manual testing go inside this directory
-/cover/
+cover
 /_bin/
 /elvish
