--- a/website/blog/index.toml
+++ b/website/blog/index.toml
@@ -2,6 +2,11 @@ prelude = "prelude"
 autoIndex = true
 
 [[articles]]
+name = "0.14.1-release-notes"
+title = "Elvish 0.14.1 Release Notes"
+timestamp = "2020-08-16"
+
+[[articles]]
 name = "0.14.0-release-notes"
 title = "Elvish 0.14.0 Release Notes"
 timestamp = "2020-07-05"
