website/ref: Drop the "the" in "the language specification".

--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -2,7 +2,7 @@ autoIndex = true
 
 [[articles]]
 name = "language"
-title = "The Language Specification"
+title = "Language Specification"
 
 [[articles]]
 name = "builtin"
