--- a/.codecov.yml
+++ b/.codecov.yml
@@ -8,5 +8,6 @@ comment: false
 ignore:
   # Exclude test helpers from coverage calculation.
   - "pkg/cli/clitest"
+  - "pkg/eval/evaltest"
   - "pkg/prog/progtest"
   - "pkg/store/storetest"
