--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -51,7 +51,7 @@ test_task:
   test_script: go test $TEST_FLAG ./...
   upload_coverage_script:
     - test -z $SKIP_UPLOAD_COVERAGE || exit 0
-    - go test -coverprofile=coverage -covermode=set ./...
+    - bash -e tools/test-coverage.sh
     - curl -s https://codecov.io/bash -o codecov && bash codecov -f coverage -t $CODECOV_TOKEN || true
 
 checkstyle_go_task:
