--- a/website/ref/index.toml
+++ b/website/ref/index.toml
@@ -21,6 +21,10 @@ name = "math"
 title = "math: Math Utilities"
 
 [[articles]]
+name = "path"
+title = "path: Filesystem Path Utilities"
+
+[[articles]]
 name = "platform"
 title = "platform: Information About the Platform"
 
