Actually, continue to exclude test helpers.
Test helpers will necessarily contain some lines that are only executed on test
failure, so exluding them from test coverage is still a good idea.

Also exclude pkg/web.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -5,3 +5,12 @@ coverage:
         threshold: 0.1%
     patch: off
 comment: false
+ignore:
+  # Exclude test helpers from coverage calculation.
+  - "pkg/cli/clitest"
+  - "pkg/eval/evaltest"
+  - "pkg/prog/progtest"
+  - "pkg/store/storetest"
+  - "pkg/testutil/must.go"
+  # The web UI is not being worked on now, also exclude it.
+  - "pkg/web"
