Copy and trim down the net/rpc package.
In particular, the dependency on net/http is removed, which removes a
bunch of transitive dependencies.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,5 +12,7 @@ ignore:
   - "pkg/prog/progtest"
   - "pkg/store/storetest"
   - "pkg/testutil/must.go"
+  # Exclude the copied rpc package.
+  - "pkg/rpc"
   # The web UI is not being worked on now, also exclude it.
   - "pkg/web"
