--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go-version: 1.15.x
+        go-version: [1.15.x]
         include:
           # Test old supported Go version
           - os: ubuntu-latest
