--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           ~/.cache/go-build
           ~/Library/Caches/go-build
           %LocalAppData%\go-build
-        key: ${{ runner.os }}/${{ hashFiles('go.sum') }}
-        restore-keys: ${{ runner.os }}/
+        key: ${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}
+        restore-keys: ${{ matrix.os }}/
     - name: Test
       run: go test -race ./...
