--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         os: [ubuntu, macos, windows]
         go-version: [1.15.x]
+        upload-coverage: true
         include:
           # Test old supported Go version
           - os: ubuntu
@@ -43,8 +44,10 @@ jobs:
     - name: Test with race detection
       run: go test -race ./...
     - name: Generate coverage
+      if: ${{ matrix.upload-coverage }}
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Upload coverage to codecov
+      if: ${{ matrix.upload-coverage }}
       uses: codecov/codecov-action@v1
       with:
         files: ./cover
