--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
 
   test:
+    name: Test
     strategy:
       matrix:
         os: [ubuntu, macos, windows]
@@ -19,7 +20,6 @@ jobs:
           - os: ubuntu
             go-version: 1.14.x
             upload-coverage: 'skip'
-    name: Test
     env:
       ELVISH_TEST_TIME_SCALE: 20
     runs-on: ${{ matrix.os }}-latest
@@ -55,6 +55,7 @@ jobs:
 
   checkstyle-go:
     name: Check style of *.go
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -69,6 +70,7 @@ jobs:
 
   checkstyle-md:
     name: Check style of *.md
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
