--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           ${{ matrix.os }}/${{ matrix.go-version }}/
           ${{ matrix.os }}/
     - name: Test with race detection
-      run: go test -race ./...
+      run: go test -race -v ./...
     - name: Generate coverage
       if: matrix.upload-coverage != 'skip'
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
