--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
       ELVISH_TEST_TIME_SCALE: 20
     runs-on: ${{ matrix.os }}-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Set up cache
       uses: actions/cache@v2
       with:
@@ -34,10 +36,8 @@ jobs:
           %LocalAppData%\go-build
         key: build/${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}
         restore-keys: |
-          ${{ matrix.os }}/${{ matrix.go-version }}/
-          ${{ matrix.os }}/
-    - name: Checkout code
-      uses: actions/checkout@v2
+          build/${{ matrix.os }}/${{ matrix.go-version }}/
+          build/${{ matrix.os }}/
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
@@ -57,18 +57,18 @@ jobs:
     name: Build binaries
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Set up cache
       uses: actions/cache@v2
       with:
         path: |
           ~/go/pkg/mod
           ~/.cache/go-build
-        key: build/${{ matrix.os }}/${{ matrix.go-version }}/${{ hashFiles('go.sum') }}
+        key: build/ubuntu/1.15.x/${{ hashFiles('go.sum') }}
         restore-keys: |
-          ${{ matrix.os }}/${{ matrix.go-version }}/
-          ${{ matrix.os }}/
-    - name: Checkout code
-      uses: actions/checkout@v2
+          build/ubuntu/1.15.x/
+          build/ubuntu/
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
@@ -86,6 +86,8 @@ jobs:
     name: Check style of **.go
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Set up environment
       run: echo "PATH=$HOME/go/bin:$PATH" >> $GITHUB_ENV
     - name: Set up cache
@@ -95,8 +97,6 @@ jobs:
           ~/go/pkg/mod
           ~/.cache/go-build
         key: checkstyle-go
-    - name: Checkout code
-      uses: actions/checkout@v2
     - name: Set up Go
       uses: actions/setup-go@v2
     - name: Set up goimports
@@ -108,6 +108,8 @@ jobs:
     name: Check style of **.md
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Set up environment
       run: |
         echo "NPM_PREFIX=$HOME/npm" >> $GITHUB_ENV
@@ -117,8 +119,6 @@ jobs:
       with:
         path: ~/npm
         key: checkstyle-md
-    - name: Checkout code
-      uses: actions/checkout@v2
     - name: Set up Node
       uses: actions/setup-node@v2
     - name: Set up Node prefix
