--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,10 @@ jobs:
     - name: Test with race detection
       run: go test -race ./...
     - name: Generate test coverage
-      if: matrix.go-version == "1.15.x"
+      if: matrix.go-version == '1.15.x'
       run: go test -coverprofile=cover -coverpkg=./pkg/... ./pkg/...
     - name: Save test coverage
-      if: matrix.go-version == "1.15.x"
+      if: matrix.go-version == '1.15.x'
       uses: actions/upload-artifact@v2
       with:
         name: cover-${{ runner.os }}
