--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,8 @@ jobs:
     env:
       OS: ${{ matrix.os }}
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Download test coverage
       uses: actions/download-artifact@v2
       with:
